--- a/www/index.html
+++ b/www/index.html
@@ -178,6 +178,8 @@
   <script src="js/controllers/ProfileController.js"></script>
   <script src="js/controllers/EssayagesController.js"></script>
   <script src="js/controllers/FavorisController.js"></script>
+  <script src="js/controllers/RendezvousController.js"></script>
+  
   
 </body>
 </html>
