--- a/www/pages/opticien.html
+++ b/www/pages/opticien.html
@@ -155,7 +155,9 @@
 				</div>
 
 				<div style="padding: 20px;">
-					<button class="col button button-raised button-fill button-round">Prendre rendez-vous</button>
+					<a href="/rdv/">
+						<button class="col button button-raised button-fill button-round">Prendre rendez-vous</button>
+					</a>
 				</div>
 
 			</div>
