--- a/www/pages/parametres.html
+++ b/www/pages/parametres.html
@@ -80,22 +80,22 @@
 					
 					<div class="list simple-list">
 						<ul>
-							<li style="padding: 0;">
-								<span>Qui peut voir mon profil (personne ou mon favori)</span>
+							<li>
+								<div>Qui peut voir mon profil (personne ou mon favori)</div>
 								<label class="toggle toggle-init">
 									<input type="checkbox" checked />
 									<span class="toggle-icon"></span>
 								</label>
 							</li>
-							<li style="padding: 0;">
-								<span>Qui peut télécharger mes données (personne ou mon favori)</span>
+							<li>
+								<div>Qui peut télécharger mes données (personne ou mon favori)</div>
 								<label class="toggle toggle-init">
 									<input type="checkbox" checked />
 									<span class="toggle-icon"></span>
 								</label>
 							</li>
-							<li style="padding: 0;">
-								<span>Fermer le compte</span>
+							<li>
+								<div>Fermer le compte</div>
 								<label class="toggle toggle-init">
 									<input type="checkbox" checked />
 									<span class="toggle-icon"></span>
@@ -114,22 +114,21 @@
 					<div class="list simple-list">
 						<ul>
 							<li>
-								<span>Comment recevoir les notifications (push)</span>
+								<div>Comment recevoir les notifications (push)</div>
 								<label class="toggle toggle-init">
 									<input type="checkbox" checked />
 									<span class="toggle-icon"></span>
 								</label>
 							</li>
 							<li>
-								<span>Recevoir les informations sur les tendances (push)</span>
+								<div>Recevoir les informations sur les tendances (push)</div>
 								<label class="toggle toggle-init">
 									<input type="checkbox" checked />
 									<span class="toggle-icon"></span>
 								</label>
 							</li>
 							<li>
-								<span>Recevoir les informations sur les offres de votre opticien favori
-									(push ou mail)</span>
+								<div>Recevoir les informations sur les offres de votre opticien favori (push ou mail)</div>
 								<label class="toggle toggle-init">
 									<input type="checkbox" checked />
 									<span class="toggle-icon"></span>
