--- a/www/pages/rdv.html
+++ b/www/pages/rdv.html
@@ -1,4 +1,4 @@
-<div class="page" data-name="becomepartner" ng-controller="EssayagesController" ng-init="init()">
+<div class="page" data-name="rendezvous" ng-controller="RendezvousController" ng-init="init()">
 	<div class="navbar">
 		<div class="navbar-bg"></div>
 		<div class="navbar-inner sliding">
@@ -8,11 +8,11 @@
 					<span class="if-not-md">Back</span>
 				</a>
 			</div>
-			<div class="title">Devenir partenaire</div>
-			<div class="right">
+			<div class="title">Rendez-vous</div>
+			<div class="right"><!--
 				<a href="#" class="link" ng-click="init()">
 					<div class="f7-icons">eyeglasses</div>
-				</a>
+				</a>-->
 			</div>
 		</div>
 	</div>
@@ -20,7 +20,7 @@
         <div style="padding-left: 15px; padding-right: 15px; background-color: #F2F2F2; padding-bottom: 80px;">
             &nbsp;
             <div class="op_text_circle">
-                <div class="title">Mes essayages</div>
+                <div class="title">Prendre Rendez-vous</div>
                 <div class="content">
                     Des professionnels de santé diplômés qui prennent le temps de découvrir vos besoins
                 </div>
