--- a/www/pages/profil.html
+++ b/www/pages/profil.html
@@ -72,6 +72,53 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="item-content item-input">
+                            <div class="item-inner">
+                                <div class="item-title item-label">Genre</div>
+                                <div class="item-input-wrap input-dropdown-wrap">
+                                    <select placeholder="Veuillez choisir" ng-model="user.user_metadata.Sexe">
+                                        <option value="-">- Choisir une valeur</option>
+                                        <option value="Masculin">Masculin</option>
+                                        <option value="Feminin">Feminin</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="item-content item-input">
+                            <div class="item-inner">
+                                <div class="item-title item-label">Région</div>
+                                <div class="item-input-wrap input-dropdown-wrap">
+                                    <select placeholder="Veuillez choisir" ng-model="user.user_metadata.Region">
+                                        <option value="-">- Choisir une valeur</option>
+                                        <option value="Auvergne-Rhône-Alpes">Auvergne-Rhône-Alpes</option>
+                                        <option value="Bourgogne-Franche-Comté">Bourgogne-Franche-Comté</option>
+                                        <option value="Bretagne">Bretagne</option>
+                                        <option value="Centre-Val de Loire">Centre-Val de Loire</option>
+                                        <option value="Grand Est">Grand Est</option>
+                                        <option value="Hauts-de-France">Hauts-de-France</option>
+                                        <option value="Île-de-France">Île-de-France</option>
+                                        <option value="Normandie">Normandie</option>
+                                        <option value="Nouvelle-Aquitaine">Nouvelle-Aquitaine</option>
+                                        <option value="Occitanie">Occitanie</option>
+                                        <option value="Pays de la Loire">Pays de la Loire</option>
+                                        <option value="Provence-Alpes-Côte d'Azur">Provence-Alpes-Côte d'Azur</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="item-content item-input">
+                            <div class="item-inner">
+                                <div class="item-title item-label">Ville</div>
+                                <div class="item-input-wrap input-dropdown-wrap">
+                                    <select placeholder="Veuillez choisir" ng-model="user.user_metadata.Ville">
+                                        <option value="-">- Choisir une valeur</option>
+                                        <option value="Paris">Paris</option>
+                                        <option value="Lyon">Lyon</option>
+                                        <option value="Marseille">Marseille</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
 
                     <div class="block block-strong row no-after no-before" style="margin: 15px 0 0 0 !important; padding-top: 0 !important; padding-bottom: 0 !important;">
