--- a/www/index.html
+++ b/www/index.html
@@ -57,9 +57,9 @@
                 <li><a href="/opticiens/" class="panel-close" data-view=".view-main">Trouver mon opticien</a></li>
                 <!--<li><a href="#">Tendances</a></li>-->
                 <li><a href="/howitworks/" class="panel-close" data-view=".view-main">Comment ça marche</a></li>
-                <li><a href="#">Opticiens indépendants</a></li>
+                <li><a href="/independants/" class="panel-close" data-view=".view-main">Opticiens indépendants</a></li>
                 <!--<li><a href="#">Favoris</a></li>-->
-                <li><a href="#">Paramètres</a></li>
+                <li><a href="/parameters/" class="panel-close" data-view=".view-main">Paramètres</a></li>
                 <li><a href="/contact/" class="panel-close" data-view=".view-main">Contact</a></li>
               </ul>
             </div>
