--- a/www/pages/howitworks.html
+++ b/www/pages/howitworks.html
@@ -22,7 +22,7 @@
         <div style="padding-left: 15px; padding-right: 15px; background-color: #F2F2F2; padding-bottom: 80px;">
             &nbsp;
             <div class="op_text_circle">
-                <div class="title">Préférence de compte</div>
+                <div class="title">Comment ça marche</div>
                 <div class="content">
                     Des professionnels de santé diplômés qui prennent le temps de découvrir vos besoins
 
@@ -54,6 +54,7 @@
 
                 </div>
             </div>
+            <!--
             <div class="op_text_circle">
                 <div class="title">Sécurité</div>
                 <div class="content">
@@ -148,18 +149,8 @@
 					- Modifier vos données démographiques (sexe, region, ville)
 					
                 </div>
-            </div>
+            </div>-->
         </div>
-		<!--
-        <div class="above_list_optk">
-
-            <form class="list" id="my-form" style="margin-top: 0px; margin-bottom: 15px; text-transform: none;">
-                <div style="margin:15px 15px 0 10px">
-
-                </div>
-            </form>
-
-        </div>-->
-        
+		
 	</div>
 </div>
