--- a/www/pages/profil.html
+++ b/www/pages/profil.html
@@ -20,7 +20,7 @@
         <div style="padding-left: 15px; padding-right: 15px; background-color: #F2F2F2; padding-bottom: 80px;">
             &nbsp;
             <div class="op_text_circle">
-                <div class="title">Mes informations</div>
+                <div class="title" ng-click="tobbi()">Mes informations</div>
                 <div class="content">
                     Des professionnels de santé diplômés qui prennent le temps de découvrir vos besoins
                 </div>
