--- a/www/pages/essayages.html
+++ b/www/pages/essayages.html
@@ -11,7 +11,7 @@
 			<div class="title">Mes essayages</div>
 			<div class="right">
 				<a href="#" class="link" ng-click="init()">
-					<div class="f7-icons">eyeglasses</div>
+					<div class="f7-icons">plus_circle</div>
 				</a>
 			</div>
 		</div>
@@ -22,7 +22,7 @@
             <div class="op_text_circle">
                 <div class="title">Mes essayages</div>
                 <div class="content">
-                    Des professionnels de santé diplômés qui prennent le temps de découvrir vos besoins
+                    Importer les images de vos essayages depuis votre bibiothède de photos locale
                 </div>
             </div>
         </div>
