--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,13 @@
   <meta name="msapplication-tap-highlight" content="no">
   <title>OpticStoreFinder</title>
   
+        
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <link rel="apple-touch-icon" href="img/logo.png" />
+  <link rel="icon" href="img/logo.png" />
+
+
   
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
@@ -57,7 +64,7 @@
                 <li><a href="/opticiens/" class="panel-close" data-view=".view-main">Trouver mon opticien</a></li>
                 <!--<li><a href="#">Tendances</a></li>-->
                 <li><a href="/howitworks/" class="panel-close" data-view=".view-main">Comment ça marche</a></li>
-                <li><a href="/independants/" class="panel-close" data-view=".view-main">Opticiens indépendants</a></li>
+                <li><a href="/independants/" class="panel-close" data-view=".view-main">Opticiens</a></li>
                 <!--<li><a href="#">Favoris</a></li>-->
                 <li><a href="/parameters/" class="panel-close" data-view=".view-main">Paramètres</a></li>
                 <li><a href="/contact/" class="panel-close" data-view=".view-main">Contact</a></li>
@@ -155,7 +162,7 @@
 
   </div>
 
-  <script src="cordova.js"></script>
+  <!--<script src="cordova.js"></script>-->
   
   <!-- CORDOVA_PLACEHOLDER_DONT_REMOVE -->
   <!-- Framework7 library -->
@@ -181,6 +188,7 @@
   <script src="js/controllers/EssayagesController.js"></script>
   <script src="js/controllers/FavorisController.js"></script>
   <script src="js/controllers/RendezvousController.js"></script>
+  <script src="js/controllers/ClickncollectController.js"></script>
   
   
 </body>
