--- a/www/pages/contact.html
+++ b/www/pages/contact.html
@@ -1,4 +1,4 @@
-<div class="page" data-name="parameters" ng-controller="EssayagesController" ng-init="init()">
+<div class="page" data-name="contact" ng-controller="EssayagesController" ng-init="init()">
 	
 	<div class="navbar">
 		<div class="navbar-bg"></div>
