--- a/www/pages/howitworks.html
+++ b/www/pages/howitworks.html
@@ -1,4 +1,4 @@
-<div class="page" data-name="parameters" ng-controller="EssayagesController" ng-init="init()">
+<div class="page" data-name="howitworks" ng-controller="EssayagesController" ng-init="init()">
 	
 	<div class="navbar">
 		<div class="navbar-bg"></div>
