--- a/www/pages/independants.html
+++ b/www/pages/independants.html
@@ -1,4 +1,4 @@
-<div class="page" data-name="legal" ng-controller="EssayagesController" ng-init="init()">
+<div class="page" data-name="independants" ng-controller="EssayagesController" ng-init="init()">
 	<div class="navbar">
 		<div class="navbar-bg"></div>
 		<div class="navbar-inner sliding">
