--- a/www/index.html
+++ b/www/index.html
@@ -162,7 +162,7 @@
 
   </div>
 
-  <!--<script src="cordova.js"></script>-->
+  <script src="cordova.js"></script>
   
   <!-- CORDOVA_PLACEHOLDER_DONT_REMOVE -->
   <!-- Framework7 library -->
